<resources>
  <string name="app_name">VorteXConnect</string>
  <string name="menu_servers">Servers</string>
  <string name="menu_clan">Clan</string>
  <string name="menu_chat">Chat</string>
  <string name="menu_profile">Me</string>
  <string name="date_header_yesterday">Yesterday</string>
  <string name="hint_enter_a_message">Enter message</string>
  <string name="date_header_today">Today</string>
  <string name="no_firestore_recs">No user records found, Creating one!!</string>
  <string name="first_time_open">First time open detected! Initilizing</string>
  <string name="successful_login">Success Login</string>
  <string name="create_group">Create group</string>
  <string name="search_no_user_found">Search no user found :(</string>
  <string name="account_null">Your account is not initlized yet! Reopen this fragment :(</string>
  <string name="add_plus_desc">Add</string>
  <string name="server_creat_header">Server\'s Creation Menu</string>
  <string name="ip_server">Server Ip</string>
  <string name="port_server">Server Port</string>
  <string name="start_server">Start Server</string>
  <string name="password_server">(Optional) Password</string>
  <string name="name_server">Server Name</string>
  <string name="offline_invalid_server">Server unreachable, Is your server offline/invalid?</string>
  <string name="servers_list">Servers List</string>
  <string name="refresh_servers">Refresh Servers (Swipe from top) to get updated list!!</string>
  <string name="delay_servers">Server cache not built, Will take little longer to list server\'s, Wait!!</string>
  <string name="vpn_not_permitted">VPN Permission not permitted, Cannot start minecraft, Permit VPN and rejoin server to play.</string>
  <string name="minecraft_not_found">Minecraft not found, You need minecraft for this action.</string>
  <string name="default_template_name">Name</string>
  <string name="default_template_subname">Subname</string>
  <string name="edit_profile_text">Edit Profile</string>
  <string name="give_vpn_perm">Please allow app to have vpn permission so as to work properly, Also rejoin the server after granting!</string>
  <string name="givestorage">Give storage permission to change inGame Name!!</string>
  <string name="anony_user_found">Anonymous user found, Please signin before using this feature.</string>
  <string name="to_change_prof">To change profile image or name, Click on the top image, or your name to bring a popup, Enter the new value and change it xD</string>
  <string name="invalid_url">Url is invalid! Check again.</string>
  <string name="updated_image">Successfully updated image!</string>
  <string name="updated_name">Successfully Updated!</string>
  <string name="too_long_name"><![CDATA[Error! Long name >20]]></string>
  <string name="first_time_anony">Anonymous account created! If you like the app then consider logging with google account on profiles page!!!</string>
  <string name="stop_server">Close any existing server</string>
  <string name="closed_all_servers">Closed All Servers!!</string>
  <string name="Donate_3d">Donate 3$</string>
  <string name="Donate_10">Donate 10$</string>
  <string name="Donate_50">Donate 50$!!?!</string>
  <string name="Donate_100">Donate 100$$$ (OMG)</string>

  <string name="thanks_for_donations" translatable="false">I love you! Thanks!!</string>
  <string name="click_to_login">Click to Sign-in with Google!</string>
</resources>